@@ -599,7 +599,7 @@
       <component name="file-roller" dir="file-roller" group="desktop">
         <podir dir="po"/>
         <potname name="file-roller.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -1196,7 +1196,7 @@
       <component name="gnome-icon-theme" dir="gnome-icon-theme" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-icon-theme.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
@@ -1227,7 +1227,7 @@
       <component name="gnome-keyring" dir="gnome-keyring" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-keyring.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2-12"/>
         <regenerate/>
         <download/>
       </component>
