@@ -1,3 +1,8 @@
+2005-10-24  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gnome-keyring, gnome-icon-theme,
+	and file-roller have been branched for gnome-2-12.
+
 2005-10-23  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-control-center, gnome-panel, and
